--- a/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
@@ -27,3 +27,11 @@ TR_FRA_SCpolice1: "秩序警察"
 TR_FRA_tech: "共産主義科学"
 TR_FRA_work_eiyuu: "労働者英雄"
 TR_FRA_work_eiyuu1: "Vive la France!(フランス万歳！)"
+
+TR_FRA_more_oil: "合成石油技術"
+TR_FRA_work_1936: "1936年度産業白書"
+
+TR_FRA_mil: "フランス陸軍"
+TR_FRA_mil1: "我は洪水なり"
+TR_FRA_nav: "フランス海軍"
+TR_FRA_nav2: "フランスは海を統べる！"
