ドイツ左ルート少しだけ

--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -30,7 +30,7 @@
  GER_declaration_of_war_on_america:0 "海を越えて"
  GER_war_plan_against_russia:0 "ロシアに対する戦争計画"
  GER_gateway_to_the_mediterranean:0 "地中海への玄関口"
- GER_proletariat_dictatorship:0 "プロレタリアート独裁"
+ GER_proletariat_dictatorship:0 "前衛党による指導"
  GER_facilitate_nationalization:0 "国有化の促進"
  GER_workers_democracy:0 "労働者の民主主義"
  GER_leadership_reform:0 "指導部の改革"
