--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -73,12 +73,14 @@
  GER_fascism_party_long: "国民社会主義労働者党"
  GER_communism_party: "KPD"
  GER_communism_party_long: "ドイツ共産党"
- GER_communism_unite_party: "SED"
- GER_communism_unite_party_long: "ドイツ社会主義統一党"
- GER_socialism_party: "USPD"
- GER_socialism_party_long: "ドイツ独立社会民主党"
- GER_socialdemocratic_party: "SPD"
- GER_socialdemocratic_party_long: "ドイツ社会民主党"
+ GER_communism_left_unite_party: "VKPD"
+ GER_communism_left_unite_party_long: "ドイツ統一共産党"
+ GER_communism_right_unite_party: "SED"
+ GER_communism_right_unite_party_long: "ドイツ社会主義統一党"
+ GER_socialism_party: "SPD"
+ GER_socialism_party_long: "ドイツ社会民主党"
+ GER_socialdemocratic_party: "ASPD"
+ GER_socialdemocratic_party_long: "ドイツ旧社会民主党"
  GER_democratic_party: "DDP"
  GER_democratic_party_long: "ドイツ民主党"
  GER_conservatism_party: "フェルキッシュ運動"
