--- a/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
@@ -1,5 +1,7 @@
 ﻿l_japanese:
 TR_FRA_kakumei_honou: "革命の炎"
+TR_FRA_kakumei_honou1: "革命の炎"
+TR_FRA_kakumei_honou2: "革命の炎"
 TR_FRA_kanzenkoyou: "完全雇用"
 TR_FRA_kanzenkoyou1: "女性の社会進出"
 TR_FRA_kanzenkoyou2: "職場での権利"
@@ -34,4 +36,4 @@ TR_FRA_work_1936: "1936年度産業白書"
 TR_FRA_mil: "フランス陸軍"
 TR_FRA_mil1: "我は洪水なり"
 TR_FRA_nav: "フランス海軍"
-TR_FRA_nav2: "フランスは海を統べる！"
+TR_FRA_nav1: "フランスは海を統べる！"
