ろしやNFをえっちに

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -1,12 +1,10 @@
 ﻿l_japanese:
  TR_Russia.2.t: "赤色テロル"
  TR_Russia.2.d: "死に体の共産主義者による周到に用意された政治テロルが決行された。1月18日、公務のためモスクワへと向かっていた間に皇帝アレクセイの車が襲撃された。持病の血友病もあり軽い負傷でも死に至る可能性がある彼は、素早く病院へ運び込まれたが、医師らの奮闘も虚しく、彼は騒乱の中で息を引き取った。そして今、赤色テロルの新たな段階が始まり、宮廷の爆破が行われようとしている。"
- TR_Russia.2.a: "計画は失敗した！"
- TR_Russia.2.b: "計画は成功した！"
- TR_Russia.3.t: "継承権問題"
- TR_Russia.3.d: "次の皇帝となる予定のゲオルギーは、赤色テロルの恐ろしさと凶暴さから、自らの身を案じて即位をためらっている。実際問題、死につつある共産主義による最後の力を振り絞ったテロルによって宮廷関係者は大量に死亡しており、これらの事実は彼を思いとどまらせるのには十分すぎる。"
- TR_Russia.3.a: "彼に恐ろしい現実を見せるとしよう。"
- TR_Russia.3.b: "ツァーリが何を恐れようか！"
+ TR_Russia.2.a: "近衛兵の活躍により失敗した！"
+ TR_Russia.2.b: "軍部の陰謀により爆破された！"
+ TR_Russia.2.c: "問題なく計画は成功した！"
+
 
  TR_Russia.4.t:"シベリア測量の終了"
  TR_Russia.4.d:"シベリア地方には、専門家の指摘通り大量の有効活用できる資源が存在した。これらの土地に派遣された専門家たちは各々の専門分野におけるシベリアの価値について研究し、既にアカデミーへ送付されている。どちらにせよ、今回の測量で得た資源を利用して、我が国の近代化はさらに一歩先に進むだろう。"
