--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -1,4 +1,23 @@
 ﻿l_japanese:
+
+
+
+
+ RUS_FkV_notsar:"空位統治"
+ RUS_FkV_notsar_desc:"英雄的皇帝アレクセイの死は帝国の惨劇だ。国内の共産主義者たちは最後の一息で我々の象徴を殺害し、あわよくば帝室を全滅させようともくろんだ。今こそ、より強固な帝政によって彼らを罰するときだ。"
+ RUS_FkV_broken_country:"崩れ落ちた帝国"
+ RUS_FkV_broken_country_desc:"かねてより軍部との対立が顕著だった帝室は、この機会を利用され全て殺された。今こそ、真の愛国者たる軍人たちによる寡頭政治を行うべきだ。"
+ RUS_FkV_communist_win:"労働者の勝利"
+ RUS_FkV_communist_win_desc:"労働者の知恵による綿密な皇帝と帝室の破壊計画は見事に成功した！各地でこの知らせを聞き、勇気づけられた労働者たちが行動を始めている。我々の革命がついに成功した！"
+
+ RUS_empire_diplo:"帝国外交"
+ RUS_empire_diplo_desc:"我が国は伝統的に、バルカンや周辺諸国へ強い影響力を持っている。この影響力を維持し、拡大させる努力が必要だ。"
+
+
+ RUS_oldtsar:"伝統的な皇帝"
+ RUS_oldtsar_desc:"§R皇帝が死亡するまで進めることはできない！§!\n皇帝として即位すべく即位したミハイルは、これまでのロシア帝国の基盤を維持し、次の世代にそのまま残そうとしている。宮廷内の反動勢力たちと協力し、今回の惨劇を起こした共産主義者を駆逐するのだ。"
+
+ 
  RUS_newtsar:"新時代の皇帝"
  RUS_newtsar_desc:"§R皇帝が死亡するまで進めることはできない！§!\n運命の悪戯によって皇帝に即位することになったキリルは、強い改革思想を持っている。宮廷や政治家たちの反動的体制を打破することにより、民衆との関りを活発にし、大幅な親政を行う。"
  RUS_unprison: "政治犯の釈放"
