インドネシアのステート割変更

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -332,8 +332,8 @@
  STATE_331:0 "ニューファンドランド"
  STATE_332:0 "ラブラドール"
  STATE_333:0 "北ボルネオ"
- STATE_334:0 "カリマンタン"
- STATE_335:0 "ジャワ"
+ STATE_334:0 "南カリマンタン"
+ STATE_335:0 "ジャカルタ首都特別州"
  STATE_336:0 "シンガポール"
  STATE_337:0 "フェロー諸島"
  STATE_338:0 "グロスタシャー"
@@ -665,12 +665,12 @@
  STATE_664:0 "スロヴァキア南部"
  STATE_665:0 "ガベス"
  STATE_666:0 "ノールボッテン"
- STATE_667:0 "小スンダ列島"
+ STATE_667:0 "ティモール"
  STATE_668:0 "モルッカ諸島"
  STATE_669:0 "西パプア"
  STATE_670:0 "ラオス"
  STATE_671:0 "トンキン"
- STATE_672:0 "スマトラ"
+ STATE_672:0 "南スマトラ"
  STATE_673:0 "スラウェシ"
  STATE_674:0 "中央オーストラリア"
  STATE_675:0 "アル・ハジャラ"
@@ -996,3 +996,22 @@
  STATE_994:0 "北スルプスカ"
  STATE_995:0 "東スルプスカ"
  STATE_996:0 "南スルプスカ"
+ STATE_997:0 "アチェ"
+ STATE_998:0 "北スマトラ"
+ STATE_999:0 "西スマトラ"
+ STATE_1000:0 "リアウ"
+ STATE_1001:0 "ジャンビ"
+ STATE_1002:0 "ランプン"
+ STATE_1003:0 "バンカ・ブリトゥン"
+ STATE_1004:0 "ブンクル"
+ STATE_1005:0 "バンテン"
+ STATE_1006:0 "西ジャワ"
+ STATE_1007:0 "中部ジャワ"
+ STATE_1008:0 "東ジャワ"
+ STATE_1009:0 "バリ"
+ STATE_1010:0 "東ヌサ・トゥンガラ"
+ STATE_1011:0 "西ヌサ・トゥンガラ"
+ STATE_1012:0 "北カリマンタン"
+ STATE_1013:0 "東カリマンタン"
+ STATE_1014:0 "西カリマンタン"
+ STATE_1015:0 "中部カリマンタン"
