イベント追加

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -29,7 +29,7 @@
  JAP_Himiko: "卑弥呼"
  JAP_Showa_Emperor: "昭和天皇"
  JAP_Toyotomi: "豊臣家"
-
+ OTT_Caliph_Abdulmecid_II: "アブデュルメジト2世"
 FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
 
 GER_karl_liebknecht: "カール・リープクネヒト"
