--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6355,3 +6355,7 @@
  CRT_DEF: "カルパティア・ルテニア"
  CRT_HUN_subject: "カルパティア・ルテニア自治政府"
  CRT_HUN_subject_DEF: "カルパティア・ルテニア自治政府"
+
+ OTT: "オスマン帝国"
+ OTT_ADJ: "オスマン帝国"
+ OTT_DEF: "オスマン帝国"
