--- a/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_ideas_l_japanese.yml
@@ -37,3 +37,9 @@ TR_FRA_mil: "フランス陸軍"
 TR_FRA_mil1: "我は洪水なり"
 TR_FRA_nav: "フランス海軍"
 TR_FRA_nav1: "フランスは海を統べる！"
+TR_FRA_kuubo: "赤色空母艦隊"
+TR_FRA_navy_air: "海軍航空隊"
+TR_FRA_tank: "戦車軍団"
+TR_FRA_artillery: "戦場の女神"
+TR_FRA_midi: "ミディ運河の近代化"
+
