日本語化追加

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -221,3 +221,16 @@ jap_Kamikaze: "神風を吹かせ"
 jap_Kamikaze_desc: ""
 jap_Operation_Ketsu: "決合作戦"
 jap_Operation_Ketsu_desc: ""
+jap_industry: "国力のさらなる成長"
+
+jap_industry_Tohoku: "東北の振興"
+
+jap_industy_Hokkaido: "北海道の振興"
+
+jap_industry_Korea: "韓国への投資"
+
+jap_industry_MAN: "満州への投資"
+
+jap_industry_Palao: "パラオへの投資"
+
+jap_colony: "植民統治の見直し"
