--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -1,7 +1,7 @@
 ﻿l_japanese:
- GER_1936_party_conference:0 "1936年共産党大会"
- GER_left:0 "左派"
- GER_right:0 "右派"
+ GER_1936_party_conference:0 "共産党の勝利"
+ GER_left:0 "テールマン派"
+ GER_right:0 "ブランドラー派"
  GER_union_USPD:0 "野党左派との合流"
  GER_suppress_opposition:0 "反対派を抑圧"
  GER_united_front_tatics:0 "統一戦線戦術"
@@ -97,3 +97,6 @@
  airforce_4:0 "対空砲への注力"
  airforce_7:0 "大型機への注力"
  airforce_6:0 "対空砲への注力 II"
+ GER_council_election:0 "1936年評議会選挙"
+ GER_SPD:0 "社会民主党の勝利"
+ GER_NSAP:0 "国民社会主義者の勝利"
