アメリカとベトナムのステート追加など

--- a/localisation/japanese/strategic_region_names_l_japanese.yml
+++ b/localisation/japanese/strategic_region_names_l_japanese.yml
@@ -278,3 +278,4 @@
  STRATEGICREGION_277: "フィンランド北部"
  STRATEGICREGION_278: "フィンランド西部"
  STRATEGICREGION_279: "ボスニア湾"
+ STRATEGICREGION_279: "中央インドシナ"
