--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -12,7 +12,64 @@
 
  RUS_empire_diplo:"帝国外交"
  RUS_empire_diplo_desc:"我が国は伝統的に、バルカンや周辺諸国へ強い影響力を持っている。この影響力を維持し、拡大させる努力が必要だ。"
-
+ RUS_europe_diplo:"欧州への一手"
+ RUS_europe_diplo_desc:"欧州はまさに共産主義勢力に飲み込まれつつある危険な状態だ。現時点で可能な限りの対策を行うことで、将来的にその成果を得られるだろう。"
+ RUS_nord_anticommune:"北欧防共協定"
+ RUS_nord_anticommune_desc:"北欧の諸国と防共協定を結び、彼らに共産主義者を間接的に排除するための方法を指示する。"
+ RUS_money_to_SER:"セルビアへの支援"
+ RUS_money_to_SER_desc:"セルビアは我が国の最も重要な同盟国だ。始まりつつあるバルカンでの変化に適応できるよう、彼らに大規模な支援を行うべきだ。"
+ RUS_money_to_ROM:"ルーマニアへの支援"
+ RUS_money_to_ROM_desc:"ルーマニアは我が国と歴史的つながりの深いバルカンの重要な国家だ。その資源的価値からも、友好関係を継続させることが得策だろう。"
+ RUS_push_ROM:"ブカレスト談話"
+ RUS_push_ROM_desc:"ブカレスト政府は我々の望む関係性を全く理解していない。彼らと友好的であり続けるために、我々は愛想が尽きかけていることを彼らに突きつけるべきだ。"
+ RUS_corp_POR:"ポルトガルへ協力を求める"
+ RUS_corp_POR_desc:"ポルトガルは我が国の艦艇が到達できない海域での活動を可能にするために入港権を要求すべき国家だ。中立国として戦時には修理も行えるだろう。"
+ RUS_invade_nord:"北欧での影響力拡大"
+ RUS_invade_nord_desc:"北欧は我が国にとって戦略的重要地域だ。これらの範囲において強い外交を行うことで、さらなる土地と影響力を得ることができるはずだ。"
+ RUS_money_to_FGE:"フランス亡命政府への資金提供"
+ RUS_money_to_FGE_desc:"共産主義者によって母国から追放されたフランス政府はいまも北アフリカに存在している。いずれ訪れる奪還の時のために、大規模な融資計画を発表しよう。"
+ RUS_diplo_help_CZE:"チェコの亡命を支援"
+ RUS_diplo_help_CZE_desc:"チェコで抑えられないほどの共産主義活動が起きているのは公然の秘密だ。奴らと戦うチェコの正当な政府を援助するために、ロシアからいくつかの提案を行うことができるだろう。"
+ RUS_no_money_to_GE:"亡命政府からの資本回収"
+ RUS_no_money_to_GE_desc:"大戦争前にフランスに投下していた我が国の資本はフランスの亡命時に接収されている。このような蛮行に対して、徹底的な手段によって我が国の利益を守るべきだ。"
+ RUS_knockout_commune:"共産主義封鎖令"
+ RUS_knockout_commune_desc:"共産主義への貿易を制限する大規模な取り組みを国際的に執り行うことで、さらなる革命の連鎖を止めることができるだろう。ただ、この計画には我が国の強い軍事力が不可欠だ。"
+ RUS_corp_with_DEN:"デンマークとの協力"
+ RUS_corp_with_DEN_desc:"デンマークが直接共産主義者に対する矛となることは考えにくいが、彼らの地理的条件は好意的な中立国としても有益なものだ。海峡の封鎖を継続させ、ドイツ艦艇の通行を阻害しよう。"
+ RUS_help_HOL:"オランダを救援"
+ RUS_help_HOL_desc:"オランダは共産主義の海に浮かぶ君主主義の孤島だ。イギリスと共にこの国を支援することで、強い防波堤となるだろう。"
+ RUS_diplo_US:"太平洋外交"
+ RUS_diplo_US_desc:"太平洋方面には多くの懸念事項がある。日本は我が国を強い海軍力で睨み、アメリカは国内情勢が不安定だ。この地域での外交こそ、我が国の背後を安定させるために役立つだろう。"
+ RUS_treaty_with_USA:"アメリカ資源貿易条約"
+ RUS_treaty_with_USA_desc:"激しい戦闘地域となるであろう欧州よりも、太平洋を通した貿易こそが我が国の命綱だ。アメリカとの資源貿易を強化し、安定した生産力を維持する必要がある。"
+ RUS_naval_pro_JAP:"日本への海軍調査団"
+ RUS_naval_pro_JAP_desc:"日本の海軍力は瞬く間に大きくなり、我が国の太平洋での圧倒的な海軍力は越されつつある。だが、彼らと海軍の情報を共有することで、その対立が融和へと向かうだろう。"
+ RUS_international_industrial_pro:"専門的な国際産業顧問団"
+ RUS_international_industrial_pro_desc:"産業力の強化のために世界各国に派遣している顧問団を統一して管理し、情報をまとめるための政府組織を結成する。"
+ RUS_international_army_pro:"軍事顧問連絡局"
+ RUS_international_army_pro_desc:"ロシアが世界に派遣した軍事顧問による情報を管理する政府機関を結成することで、より組織的な国際調査に乗り出すことができる。"
+ RUS_air_pro_US:"アメリカへの空軍調査団"
+ RUS_air_pro_US_desc:"アメリカは不安定だが、その生産力と大戦争からの空軍力は確実なものだ。彼らの空軍組織を調査し、我が国の空軍強化に向けて応用できるかもしれない。"
+ RUS_afgan_diplo:"アフガニスタンへの影響力強化"
+ RUS_afgan_diplo_desc:"グレートゲームの頃にアフガニスタンを失ってから、我が国の中東権益は大きく変化しなかった。いまこそ、イギリスの隙をついてアフガニスタンに対して圧力を強めるべきだろう。"
+ RUS_iraq_diplo:"イラク政府への連絡"
+ RUS_iraq_diplo_desc:"イラクはイギリスの強い影響下にあるが、イギリスが中東に目を向けていない今のうちにこの地域に対して新たな行動を起こすことができるだろう。この地域の資源に対して外交的に行動を起こすことができる。"
+ RUS_invade_mid:"中東権益の積極的拡大"
+ RUS_invade_mid_desc:"協力や支援によって中東の権益を保護することは難しい。この地に対して圧力と武力による安寧を与え、ロシアの資源庫に作り替えるべきだ。"
+ RUS_friend_mid:"中東の潜在的保護者"
+ RUS_friend_mid_desc:"中東地域の国家はどれも我が国の支援によってさらなる成長が見込める。この地域を直接支配せず、支援などによる影響力強化を行うことで、この地域の効率的な資源供給に期待できるだろう。"
+ RUS_send_pros:"顧問団・調査団の派遣"
+ RUS_send_pros_desc:"我が国の技術はある一面では優れているが、他の一面では後進的だ。世界各国と情報を交換する専門の外交官を派遣して、我が国の成長の糧とするべきだ。"
+ RUS_send_tech_pro:"技術顧問団の派遣"
+ RUS_send_tech_pro_desc:"我が国の技術研究を進めるために、非軍事的な目的と掲げて世界各国に技術者を派遣し、我が国に極秘で技術の詳細を与える業務を行う。"
+ RUS_send_army_pro:"軍事顧問団の派遣"
+ RUS_send_army_pro_desc:"戦間期の間に成長した各国の軍隊に顧問団と調査団を兼ねる政治的な将校を送る。我が国の独自の軍隊に対する改善策となるだろう。"
+ RUS_ankara_treaty:"アンカラ条約の更新"
+ RUS_ankara_treaty_desc:"我が国が参戦したギリシャ・トルコ戦争における条約であるアンカラ条約は、トルコの非軍事化と民主化について述べている。この条約はもはや今の国際情勢には合わない旧時代的なものとなっており、更新のための会議を行う必要がある。"
+ RUS_corp_TUR:"復興と同盟"
+ RUS_corp_TUR_desc:"トルコに対して非軍事化の要綱を弱め、我が国の新たな同盟国となるように条件を提示することで、黒海の完全な安寧が確定する。ただ、我々が得た土地はいくらか失うだろう。"
+ RUS_push_TUR:"非軍事化の継続"
+ RUS_push_TUR_desc:"トルコが望む再軍備に対して強烈な拒否を通告することで、かの国は常に侵略の恐怖に怯えることになる。その結果、産業が停滞し、どのような結果になろうとも、我々に抵抗した彼らの責任ではないか。"
 
  RUS_oldtsar:"伝統的な皇帝"
  RUS_oldtsar_desc:"§R皇帝が死亡するまで進めることはできない！§!\n皇帝として即位すべく即位したミハイルは、これまでのロシア帝国の基盤を維持し、次の世代にそのまま残そうとしている。宮廷内の反動勢力たちと協力し、今回の惨劇を起こした共産主義者を駆逐するのだ。"
