州とvpの名前設定

--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -31,4 +31,19 @@
  VICTORY_POINTS_11985:0 "下関"
  VICTORY_POINTS_1158:0 "佐世保"
  VICTORY_POINTS_1025:0 "北九州"
-
+ VICTORY_POINTS_9948:0 "ドンダン"
+ VICTORY_POINTS_12319:0 "ラオカイ"
+ VICTORY_POINTS_4397:0 "ヴィン"
+ VICTORY_POINTS_4379:0 "フエ"
+ VICTORY_POINTS_11985:0 "トゥイホア"
+ VICTORY_POINTS_4401:0 "ホーチミン"
+ VICTORY_POINTS_12133:0 "カントー"
+ VICTORY_POINTS_10177:0 "バットンボーン"
+ #USA
+ VICTORY_POINTS_4518:0 "フレズノ"
+ VICTORY_POINTS_3733:0 "ロチェスター"
+ VICTORY_POINTS_9673:0 "オールバニ"
+ VICTORY_POINTS_6909:0 "ハートフォード"
+ VICTORY_POINTS_11830:0 "プロヴィデンス"
+ VICTORY_POINTS_4445:0 "モントピリア"
+ VICTORY_POINTS_773:0 "コンコード"
