--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -355,11 +355,11 @@
  STATE_354:0 "トラブゾン"
  STATE_355:0 "サムスン"
  STATE_356:0 "カスタモヌ"
- STATE_357:0 "ニューイングランド"
- STATE_358:0 "ニューヨーク"
+ STATE_357:0 "コネチカット"
+ STATE_358:0 "ニューヨーク東部"
  STATE_359:0 "ニュージャージー"
- STATE_360:0 "ペンシルべニア"
- STATE_361:0 "メリーランド"
+ STATE_360:0 "ペンシルべニア東部"
+ STATE_361:0 "コロンビア特別区"
  STATE_362:0 "バージニア"
  STATE_363:0 "ノースカロライナ"
  STATE_364:0 "サウスカロライナ"
@@ -373,10 +373,10 @@
  STATE_372:0 "アーカンソー"
  STATE_373:0 "ミズーリ"
  STATE_374:0 "オクラホマ"
- STATE_375:0 "テキサス"
+ STATE_375:0 "テキサス北部"
  STATE_376:0 "ニューメキシコ"
  STATE_377:0 "アリゾナ"
- STATE_378:0 "カリフォルニア"
+ STATE_378:0 "カリフォルニア北部"
  STATE_379:0 "ネバダ"
  STATE_380:0 "ユタ"
  STATE_381:0 "ワイオミング"
@@ -668,8 +668,8 @@
  STATE_667:0 "ティモール"
  STATE_668:0 "モルッカ諸島"
  STATE_669:0 "西パプア"
- STATE_670:0 "ラオス"
- STATE_671:0 "トンキン"
+ STATE_670:0 "ラオス北部"
+ STATE_671:0 "紅河デルタ"
  STATE_672:0 "南スマトラ"
  STATE_673:0 "スラウェシ"
  STATE_674:0 "中央オーストラリア"
@@ -739,7 +739,7 @@
  STATE_738:0 "アルー諸島"
  STATE_739:0 "ハイダグアイ"
  STATE_740:0 "バンクーバー島"
- STATE_741:0 "カンボジア"
+ STATE_741:0 "プノンペン"
  STATE_742:0 "スタリナバード"
  STATE_743:0 "青島"
  STATE_744:0 "西安"
@@ -1015,3 +1015,28 @@
  STATE_1013:0 "東カリマンタン"
  STATE_1014:0 "西カリマンタン"
  STATE_1015:0 "中部カリマンタン"
+ STATE_1016:0 "ニューハンプシャー"
+ STATE_1017:0 "バーモンド"
+ STATE_1018:0 "マサチューセッツ"
+ STATE_1019:0 "ロードアイランド"
+ STATE_1020:0 "ペンシルべニア西部"
+ STATE_1021:0 "テキサス南部"
+ STATE_1022:0 "メコンデルタ"
+ STATE_1023:0 "東北部"
+ STATE_1024:0 "中南部"
+ STATE_1025:0 "サイニャブーリー"
+ STATE_1026:0 "ラオス南部"
+ STATE_1027:0 "バタンバン"
+ STATE_1028:0 "ストゥントレン"
+ STATE_1029:0 "西北部"
+ STATE_1030:0 "安南"
+ STATE_1031:0 "ロサンゼルス"
+ STATE_1032:0 "サンフランシスコ"
+ STATE_1033:0 "カリフォルニア南部"
+ STATE_1034:0 "ナバホ"
+ STATE_1035:0 "メリーランド"
+ STATE_1036:0 "デラウェア"
+ STATE_1037:0 "ニューヨーク市部"
+ STATE_1038:0 "イロコイ"
+ STATE_1039:0 "バッファロー"
+ STATE_1040:0 "メイン"
