--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -314,7 +314,7 @@
  VICTORY_POINTS_7236: "ハートヤイ"
  VICTORY_POINTS_10438: "ナコーンラーチャシーマー"
  VICTORY_POINTS_4075: "ハノイ"
- VICTORY_POINTS_4401: "サイゴン"
+ VICTORY_POINTS_4401: "ホーチミン"
  VICTORY_POINTS_1182: "東京"
  VICTORY_POINTS_9998: "横浜"
  VICTORY_POINTS_7072: "大阪"
