ドイツNF大幅改変

--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -19,7 +19,7 @@
  GER_approaching_international:0 "インターナショナルへの接近"
  GER_organize_secret_police_force:0 "秘密警察を組織"
  GER_purge_dissidents:0 "反体制派を粛清"
- GER_distance_from_international:0 "距離を置く"
+ GER_distance_from_international:0 "距離を取る"
  GER_international_revolution:0 "プロレタリア国際主義"
  GER_protecting_czech_communists:0 "チェコの共産主義者を保護"
  GER_supporting_poland:0 "ポーランドの独立を支援"
@@ -48,7 +48,7 @@
  GER_socialist_realism:0 "社会主義リアリズム"
  GER_state_atheism:0 "国家無神論"
  GER_support_finland:0 "フィンランドの独立を支援"
- newfocus_95:0 "バルト海での安全保障問題"
+ newfocus_95:0 ""
  GER_friendship_with_denmark:0 "デンマークとの友好"
  GER_reconquest_african_colonies:0 "退路を断つ"
  GER_war_economy:0 "戦争経済"
@@ -98,5 +98,32 @@
  airforce_7:0 "大型機への注力"
  airforce_6:0 "対空砲への注力 II"
  GER_council_election:0 "1936年評議会選挙"
+ GER_USPD:0 "独立社会民主党の勝利"
+ GER_MSPD:0 "多数派社会民主党の勝利"
  GER_SPD:0 "社会民主党の勝利"
  GER_NSAP:0 "国民社会主義者の勝利"
+ industry_6:0 "インフラへの投資"
+ industry_10:0 "インフラへの投資 II"
+ GER_national_assembly:0 "国民議会への権限委譲"
+ GER_weimer_republic:0 "ヴァイマル憲法"
+ GER_FGE:0 "亡命政府の公認"
+ GER_ENG:0 "イギリスとの友好"
+ GER_Allies:0 "連合国への加盟"
+ GER_RUS:0 ""
+ GER_break_off_a_bridgehead:0 "橋頭堡を断つ"
+ GER_SRI:0 "イタリアからの産業顧問"
+ GER_balkan:0 "東欧への介入"
+ GER_Nordic:0 "北欧への介入"
+ GER_DEN:0 "デンマークとの友好"
+ GER_UKR:0 "ウクライナの同志"
+ GER_balt:0 "バルトの同志"
+ GER_Eastern_Europe:0 "西欧への介入"
+ GER_Western_Europe:0 "東欧への介入"
+ newfocus_104:0 "スカンディナヴィアの統制"
+ GER_Straits_of_Dover:0 "海峡への一手"
+ GER_heavy_industry:0 "重工業への投資"
+ GER_industrial_advisor_from_3rd_inter:0 "フランスからの産業顧問"
+ GER_industrial_advisor_from_France:0 "フランスからの産業顧問"
+ GER_industrial_advisor_from_france:0 "フランスからの産業顧問"
+ GER_out_of_country_experts:0 "国外の専門家"
+ GER_siegfried_fortress_line:0 "ジークフリート要塞線"
