日本語化追加

--- a/localisation/TR_common/japanese/TR_welcome_splashgui_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_welcome_splashgui_l_japanese.yml
@@ -16,6 +16,8 @@
   RUS_intro_content0: "$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争では革命直後の不安定なドイツを攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
   SRI_intro_header0: "分かたれたイタリア"
   SRI_intro_header1: "社会主義との対立"
+  JAP_intro_header0: "旭日はのぼる"
+  JAP_intro_content0: "極東の憲兵にしてアジアで唯一の列強国たる大日本帝国は積極財政により幾度かの経済危機も乗り越え順調に国力を伸ばしている。\n先の戦争では日英同盟を口実に介入し、ドイツのアジア利権も獲得したことで国際的地位が高まっている。\nしかし、臣民はそうは思っていないようだ。臣民は今の大日本帝国の国際的立ち位置が国力に見合っていないものだと不満を募らせている。\n日清戦争以降、大規模な戦争を経験していない大日本帝国の軍隊は見かけ以上に弱体だ。\n臣民の不満と軍部からの政治的圧力に苦しむ政府はどのようにこの帝国をかじ取りしていくのだろうか。\n\n\n旭日は永遠に"
 
   # tab 4 #
   TR_CURRENT_VERSION: "0.1"
