--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -396,7 +396,7 @@
  VICTORY_POINTS_10913: "ケルマーン"
  VICTORY_POINTS_10737: "カーブル"
  VICTORY_POINTS_4893: "ヘラート"
- VICTORY_POINTS_3957: "ワシントン"
+ VICTORY_POINTS_3957: "ワシントンD.C."
  VICTORY_POINTS_3878: "ニューヨーク"
  VICTORY_POINTS_9450: "シカゴ"
  VICTORY_POINTS_9814: "ロサンゼルス"
