イロコイの追加と中華軍閥の旗追加

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6359,3 +6359,19 @@
  OTT: "オスマン帝国"
  OTT_ADJ: "オスマン帝国"
  OTT_DEF: "オスマン帝国"
+
+ IRC_fascism: "北米開放運動"
+ IRC_fascism_DEF: "北米開放運動"
+ IRC_democratic: "イロコイ連邦"
+ IRC_democratic_DEF: "イロコイ連邦"
+ IRC_neutrality: "イロコイ連邦"
+ IRC_neutrality_DEF: "イロコイ連邦"
+ IRC_communism: "イロコイ社会主義連邦"
+ IRC_communism_DEF: イロコイ社会主義連邦"
+ IRC_fascism_ADJ: "イロコイ"
+ IRC_democratic_ADJ: "イロコイ"
+ IRC_neutrality_ADJ: "イロコイ"
+ IRC_communism_ADJ: "イロコイ"
+ IRC: "イロコイ連邦"
+ IRC_DEF: "イロコイ連邦"
+ IRC_ADJ: "イロコイ"
