バグに対する大聖戦「青の場合」 朝鮮の州調整vp追加

--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -53,3 +53,13 @@
  VICTORY_POINTS_11830:0 "プロヴィデンス"
  VICTORY_POINTS_4445:0 "モントピリア"
  VICTORY_POINTS_733:0 "コンコード"
+ #KOR
+ VICTORY_POINTS_1081:0 "デグ"
+ VICTORY_POINTS_10110:0 "光州"
+ VICTORY_POINTS_7204:0 "太田"
+ VICTORY_POINTS_1148:0 "江陵"
+ VICTORY_POINTS_7221:0 "仁川"
+ VICTORY_POINTS_12040:0 "開城"
+ VICTORY_POINTS_11835:0 "新義州"
+ VICTORY_POINTS_6928:0 "ハムフン"
+ VICTORY_POINTS_898:0 "清津"
