バグに対する大聖戦「黄の場合」

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6367,7 +6367,7 @@
  IRC_neutrality: "イロコイ連邦"
  IRC_neutrality_DEF: "イロコイ連邦"
  IRC_communism: "イロコイ社会主義連邦"
- IRC_communism_DEF: イロコイ社会主義連邦"
+ IRC_communism_DEF: "イロコイ社会主義連邦"
  IRC_fascism_ADJ: "イロコイ"
  IRC_democratic_ADJ: "イロコイ"
  IRC_neutrality_ADJ: "イロコイ"
