--- a/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
+++ b/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
@@ -12,13 +12,9 @@
  TR_GER_MAIN_SCENARIO_DESC:"この国は$TR_MAIN_FACTION_INTERNATIONAL$の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦するだろう！"
  TR_FRA_MAIN_SCENARIO_DESC:"フランスコミューンは革命後の連立政権が崩壊して以降、政治的混沌を極めている。この情勢に国民は失望しており、他にも経済問題や人口動態の問題などを抱えている。\nこれらの諸問題にフランスは対応しなければならないだろう..."
  TR_SRI_MAIN_SCENARIO_DESC:"この国は§R共産主義§!の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦する可能性が高い。"
-
- TR_JAP_MAIN_SCENARIO_DESC:"世界大戦ではアジアにおける§B民主主義§!を守る行動に出るだろう！"
- TR_USA_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った国家だ。世界大戦ではモンロー主義や§B民主主義§!を守る行動に出るだろう！"
-
+ TR_JAP_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った大日本帝国はその後も順調に国力を伸ばし、アジア唯一の列強と自負している。1920年代の相次ぐ経済危機も高橋是清蔵相による積極財政で乗り越えた。しかし、長引く積極財政によって引き起こされたインフレに国民は苦しんでいる。そのうえ、国民は今の大日本帝国の国際地位が低すぎると考え対外進出を求めている。旭日は世界を照らすのだろうか？"
+ TR_USA_MAIN_SCENARIO_DESC:"1929年10月24日の暗黒の木曜日を発端として起こった大恐慌は、自由の国アメリカを未だに苦しめている。その後の政権はことごとく恐慌に対する対策に失敗した。国中に失業者が溢れており、そこには夢も希望も存在しない。\nこの状況に対し民衆が望む政治は、§B民主党§!によるものでも、§2共和党§!によるものでもない。そう、革新的な§R新たなる政治§!を望んでいるのだ。\nだが一方で、一部の政治家や民衆は§R新興勢力§!に対し危機感を抱いており、南部においてそれは顕著である。\n果たして彼らの望みは§5平和的§!に実現されるのだろうか?あるいは§R取り返しのつかない暴力§!へと至るのだろうか？\n御託はもういい、全ては本年度の選挙の結果により決定される。"
 
  TR_CZE_MAIN_SCENARIO_DESC:"§B大戦争§!で独立を果たしたチェコは、ズデーテンの確保に失敗した国民社会党が失脚して以降、シュコダ財閥による独裁が続いているが、国民社会党は未だに体制に反抗しており、他にもロシアとドイツのイデオロギー的な影響力の衝突によって早くも危機に陥っている。\n$TR_MAIN_FACTION_INTERNATIONAL$は我が国の共産主義者を刺激し、$TR_MAIN_FACTION_SLAVENTENTE$は我が国の民族主義を高揚させようと必死の内政工作を行っている。\n国内の共産主義者の過激化は留まるところを知らない。我々は必ず我々の手でこの地域における確固たる独立を保たなければならない！"
  TR_GRE_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦ったギリシャは、大戦争と希土戦争で膨大な小アジアの領土を得た。\nさらに、セルビアと共に行ったアルバニア分割は成功し、この地域における支配も安定している。\nだが、この地域を狙う§R北イタリア§!の影響力は我が国の共産主義者を活発化させ、政府は統一した意見を示すことすらできていない。\nメガリ・イデアを達成したヨーロッパ最古の文明国ギリシアは、どのような進路を描くのだろうか。"
  TR_SER_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦ったセルビアは、大セルビア主義を体現するために大規模な軍拡を行っている。\nギリシアと共同で行ったアルバニア分割によって得た工業力は、我が国の艦隊建造計画に大きく貢献した。\n§R共産主義§!の影響力がバルカンを蝕まんとする中、セルビアは§rロシア帝国§!との強い関係によって守られている。\n我々に奪われた領土の回復を試みる回復同盟が我が国に対する圧力を強めている中、セルビアはそれを利用した新たな拡大計画を検討している..."
- TR_JAP_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った大日本帝国はその後も順調に国力を伸ばし、アジア唯一の列強と自負している。1920年代の相次ぐ経済危機も高橋是清蔵相による積極財政で乗り越えた。しかし、長引く積極財政によって引き起こされたインフレに国民は苦しんでいる。そのうえ、国民は今の大日本帝国の国際地位が低すぎると考え対外進出を求めている。旭日は世界を照らすのだろうか？"
-
