エルザスロートリンゲン、クライペダ、グダニスク

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -26,7 +26,7 @@
  STATE_25:0 "リムーザン"
  STATE_26:0 "オーヴェルニュ"
  STATE_27:0 "ブルゴーニュ"
- STATE_28:0 "アルザス＝ロレーヌ"
+ STATE_28:0 "エルザス＝ロートリンゲン"
  STATE_29:0 "ノール＝パ・ド・カレー"
  STATE_30:0 "ロワール"
  STATE_31:0 "ミディ・ピレネー"
