--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -25,7 +25,7 @@
  VICTORY_POINTS_6364: "オーフス"
  VICTORY_POINTS_3544: "ワルシャワ"
  VICTORY_POINTS_9427: "クラクフ"
- VICTORY_POINTS_362: "ダンツィヒ"
+ VICTORY_POINTS_362: "グダンスク"
  VICTORY_POINTS_3320: "ヴィリニュス"
  VICTORY_POINTS_3392: "ブレスト＝リトフスク"
  VICTORY_POINTS_3393: "グロドノ"
@@ -74,8 +74,8 @@
  VICTORY_POINTS_9434: "ル・アーヴル"
  VICTORY_POINTS_9490: "トロワ"
  VICTORY_POINTS_9495: "レンヌ"
- VICTORY_POINTS_9503: "ストラスブール"
- VICTORY_POINTS_9559: "メス"
+ VICTORY_POINTS_9503: "シュトラスブルク"
+ VICTORY_POINTS_9559: "メッツ"
  VICTORY_POINTS_9642: "ブザンソン"
  VICTORY_POINTS_9898: "モンペリエ"
  VICTORY_POINTS_9909: "ニース"
@@ -822,7 +822,7 @@
  VICTORY_POINTS_10833: "ベルベラ"
  VICTORY_POINTS_5068: "ハルゲイサ"
  VICTORY_POINTS_3581: "プレショフ"
- VICTORY_POINTS_3288: "メーメル"
+ VICTORY_POINTS_3288: "クライペダ"
  VICTORY_POINTS_3547: "ボン"
  VICTORY_POINTS_3444: "デュッセルドルフ"
  VICTORY_POINTS_11905: "アレクサンドルーポリ"
