--- a/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
+++ b/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
@@ -10,7 +10,7 @@
  TR_ENG_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_ALLIES$の盟主イギリスは、欧州大陸の共産主義の拡大に強い懸念を示している。\n先の大戦争で圧倒的な海の王者であることを証明したイギリスは、その後もロシアと建艦競争を行い、世界首位の海軍力で欧州の海を自らの支配下に置いている。\n共産主義の台頭によって、植民地や自治領でも過激な思想が発生し、ロンドンはその対応に追われているようだ。\n大英帝国の栄光を保つために、我々はかつての盟友フランス、ロシアと共に共産主義者を破壊しなければならない。戦いの時は迫りつつある。"
 
  TR_GER_MAIN_SCENARIO_DESC:"この国は$TR_MAIN_FACTION_INTERNATIONAL$の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦するだろう！"
- TR_FRA_MAIN_SCENARIO_DESC:"フランスコミューンは革命後の連立政権が崩壊して以降、政治的混沌を極めている。この情勢に国民は失望しており、他にも経済問題や人口動態の問題などを抱えている。\nこれらの諸問題にフランスは対応しなければならないだろう..."
+ TR_FRA_MAIN_SCENARIO_DESC:"§Rフランス§は革命後の連立政権が崩壊して以降、政治的混沌を極めている。この情勢に国民は失望しており、他にも経済問題や人口動態の問題などを抱えている。\n§Rフランス§はこれらの諸問題に対応しなければならないだろう..."
  TR_SRI_MAIN_SCENARIO_DESC:"この国は§R共産主義§!の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦する可能性が高い。"
  TR_JAP_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った大日本帝国はその後も順調に国力を伸ばし、アジア唯一の列強と自負している。1920年代の相次ぐ経済危機も高橋是清蔵相による積極財政で乗り越えた。しかし、長引く積極財政によって引き起こされたインフレに国民は苦しんでいる。そのうえ、国民は今の大日本帝国の国際地位が低すぎると考え対外進出を求めている。旭日は世界を照らすのだろうか？"
  TR_USA_MAIN_SCENARIO_DESC:"1929年10月24日の暗黒の木曜日を発端として起こった大恐慌は、自由の国アメリカを未だに苦しめている。その後の政権はことごとく恐慌に対する対策に失敗した。国中に失業者が溢れており、そこには夢も希望も存在しない。\nこの状況に対し民衆が望む政治は、§B民主党§!によるものでも、§2共和党§!によるものでもない。そう、革新的な§R新たなる政治§!を望んでいるのだ。\nだが一方で、一部の政治家や民衆は§R新興勢力§!に対し危機感を抱いており、南部においてそれは顕著である。\n果たして彼らの望みは§5平和的§!に実現されるのだろうか?あるいは§R取り返しのつかない暴力§!へと至るのだろうか？\n御託はもういい、全ては本年度の選挙の結果により決定される。"
