ドイツ選挙時イベント増やした

--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -14,7 +14,7 @@
  GER_social_fascism:0 "社会ファシズム論"
  GER_unite_SPD:0 "社共合同"
  GER_totalitarianism:0 "全体主義論"
- GER_pandering_to_the_left:0 "左派との迎合"
+ GER_pandering_to_the_left:0 "左派との妥協"
  GER_positive_propaganda:0 "積極的なプロパガンダ"
  GER_approaching_international:0 "インターナショナルへの接近"
  GER_organize_secret_police_force:0 "秘密警察を組織"
@@ -127,3 +127,4 @@
  GER_industrial_advisor_from_france:0 "フランスからの産業顧問"
  GER_out_of_country_experts:0 "国外の専門家"
  GER_siegfried_fortress_line:0 "ジークフリート要塞線"
+ GER_Revisionism:0 "修正主義者との妥協"
