スペイン内戦とフランス、フランスアフリカ

--- a/localisation/TR_common/japanese/TR_welcome_splashgui_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_welcome_splashgui_l_japanese.yml
@@ -14,6 +14,8 @@
   default_intro_content: "なんか書いてください"
   RUS_intro_header0: "揺らぐ秩序"
   RUS_intro_content0: "$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争では革命直後の不安定なドイツを攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
+  FRA_intro_header0: "混沌と復讐"
+  FRA_intro_content0: "§Rフランス§!は§Rインターナショナル§!の盟主にして欧州初の革命政府ではあるが、革命後の連立政権が崩壊して以降、政治的混沌を極めている。\nこの情勢に国民は失望しており、更に§0雇用の問題§!や§0人口動態の問題§!などを抱えており、これらの諸問題に対応しなければならないだろう。\nまた、外に目を向けてみると§Bフランス領アフリカ§!は未だに§Bフランス共和国§!を僭称する奴らに占拠されており、§Bカレー§!と§Bシェルブール§!は§Bイギリス§!が大戦の終結間際にどさくさに紛れて占拠している...我々はこれらの不当に占拠された土地を取り戻すことはできるのだろうか？"
   SRI_intro_header0: "分かたれたイタリア"
   SRI_intro_header1: "社会主義との対立"
   JAP_intro_header0: "旭日はのぼる"
