--- a/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_FRA_focus_l_japanese.yml
@@ -32,6 +32,9 @@
  FRA_com_EU2: "EUの結成"
  FRA_dip: "反乱軍を鎮圧"
  FRA_dip1: "イギリスを打倒"
+ FRA_dip_BEL: "フランドルの統合"
+ FRA_dip_ALG: "アルジェリアの統治権の回復"
+ FRA_dip_ALG2: "僭称政府の破壊"
  FRA_dip2: "石油を確保"
  FRA_dip_nuke: "キュリー計画"
  FRA_dip_nuke1: "共同核開発"
