--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -129,10 +129,6 @@
  JAP_conservatism_party: "立憲政友会"
  JAP_socialdemocratic_party: "社会大衆党"
  JAP_anarchism_party: "日本無政府共産党"
- USA_communism_party: "アメリカ共産党"
- USA_democratic_party: "民主党"
- USA_republican_party: "共和党"
- USA_fascism_party: "アメリカ白銀軍団"
  FRA_anarchism_party: "CGT-SR"
  FRA_anarchism_party_long: "労働総同盟-革命労働組合員"
  FRA_syndicalism_party: "CGT"
@@ -1180,3 +1176,17 @@
  JAP_Toyotomi_family_long: "豊臣家"
  JAP_Yamataikoku: "邪馬台国"
  JAP_Yamataikoku_long: "邪馬台国"
+
+ USA_anarchism_party: "自由意思党"
+ USA_syndicalism_party: "アメリカ労働組合連盟"
+ USA_communism_party: "アメリカ共産党"
+ USA_socialism_party: "アメリカ社会党"
+ USA_socialdemocratic_party: "社会民主党"
+ USA_democratic_party: "民主党"
+ USA_conservatism_party: "共和党"
+ USA_neutrality_party: "中道主義"
+ USA_HNYE_party: "神聖ニューヨーク庁"
+ USA_theocracy_party: "LDS"
+ USA_theocracy_party_long: "末日聖徒イエス・キリスト教会"
+ USA_fascism_party: "KKK"
+ USA_fascism_party_long: "Ku Klux Klan"
