モンゴルモンゴル

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -356,11 +356,14 @@
  SPR_democratic_ADJ: "スペイン"
  SPR_neutrality_ADJ: "スペイン"
  SPR_communism_ADJ: "スペイン"
+ SPR_socialdemocratic: "スペイン共和国"
+ SPR_socialdemocratic_DEF: "スペイン共和国"
+ SPR_socialdemocratic_ADJ: "スペイン共和国"
  SPR: "スペイン"
  SPR_DEF: "スペイン"
  SPR_ADJ: "スペイン"
- SPR_subject: "$OVERLORDADJ$ $SPR$"
- SPR_subject_DEF: "$OVERLORDADJ$ $SPR$"
+ SPR_subject: "スペイン"
+ SPR_subject_DEF: "スペイン"
  ITA_fascism: "イタリア"
  ITA_fascism_DEF: "イタリア"
  ITA_democratic: "共和制イタリア"
