ローカライズ

--- a/localisation/TR_focus/japanese/TR_USA_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_USA_focus_l_japanese.yml
@@ -1,3 +1,79 @@
 ﻿l_japanese:
  TR_USA_1936_presidential_election: "1936年アメリカ合衆国大統領選挙"
  TR_USA_1936_presidential_election_desc: "日々共産主義者がその勢力を広げるアメリカ。\nたとえ職がなくとも、今日寝床とする場所がなくとも、\n明日食べるものがなくとも、人々は明後日へ希望を向けて、自らの票を捧げる。"
+ TR_USA_contacting_the_electorate: "選挙人との接触"
+ TR_USA_contacting_the_electorate_desc: "選挙の結果を確実にするため、我々は選挙人への工作を行うべきであろう。だが他の勢力も行っている可能性があり早急な掌握が必要だ。"
+ TR_USA_mass_oratory: "大衆演説"
+ TR_USA_mass_oratory_desc: "大衆こそが民主主義の原動力である。その大衆に呼びかけ政権の地盤を盤石なものにするのだ。"
+ TR_USA_obstructing_the_election: "選挙妨害工作"
+ TR_USA_obstructing_the_election_desc: "敵対勢力は日に日に大きくなっており、我らの政権獲得において大きな障壁となる。そこで虚偽の情報を流出させ敵対勢力の印象低下を狙うのだ。"
+ TR_USA_raid_on_parliament: "議会を襲撃"
+ TR_USA_raid_on_parliament_desc: "もはや議会は機能していない。民衆は日々暴動を起こし互いに己の信に従う。このような国が民主主義と言えるのか？"
+ TR_THE_FATAL_DAY: "運命の時"
+ TR_THE_FATAL_DAY_desc: "運命は今定まる。共産主義か、白人至上主義か、はたまた無政府主義かもしれない。そんな予想もつかない結末を今迎えようとしている。"
+ TR_USA_the_new_way: "新たなる道"
+ TR_USA_the_new_way_desc: "もう既存の政党は懲り懲りだ。彼らは古きやり方にこだわり恐慌の対策など一つもできていない。そんな今こそ、アメリカに新たなる風を吹かせるべきなのだ。"
+ TR_USA_clues_to_escape_the_depression: "恐慌脱出への糸口"
+ TR_USA_clues_to_escape_the_depression_desc: "やはり緊縮財政による対策は間違えていた。続く恐慌により人々は経済的に貧しくなるだけでなく、その心も貧しくなってきている。こんな状況を一変させる政策を、国民たちは望んでいる。"
+ TR_USA_strengthen_trade_unions: "労働組合の強化"
+ TR_USA_strengthen_trade_unions_desc: "失業対策として有用なのはやはり強くその職が守られることであろう。そんな労働者に優しいアメリカを目指すためには、労働組合の力を強めることが急務である。"
+ TR_USA_call_to_north_workers: "北部の労働者への呼びかけ"
+ TR_USA_call_to_north_workers_desc: "我々の政策には北部工業地帯に住む労働者たちによる大きな支持が得られることが期待される。"
+ TR_USA_communist_state_establishment: "共産主義国家の樹立"
+ TR_USA_communist_state_establishment_desc: "社会主義など生ぬるい。修正主義の阿呆どものやることではこの国は救えない。やはり国家手動の計画経済によってのみこの国は救えるのだ。"
+ TR_trade_union_self_government: "労働組合自治"
+ TR_trade_union_self_government_desc: "労働者が職を失ったのは政治や経済が一部の富裕層によって握られていたのが原因だ。それ故、我らは労働者が見ず彼決定し、自らを守ることが可能な社会を気づきあげなければならない。"
+ TR_USA_true_freedom: "真なる自由"
+ TR_USA_true_freedom_desc: "昨今の左翼勢力の主張はもううんざりだ。社会保障だの計画経済だの、そんなのは自由であるとは言えない。そう思うだろう？この国の国是は自由だ。そんなくだらないことを国家はするべきではない。強きは強く。弱きは弱くがこの世の常だ。我々の自由と権利は自らの行動によってのみ成し遂げられる。そんな権利を制限する政府などもはや必要ない。"
+ TR_USA_big_government: "大きな政府"
+ TR_USA_big_government_desc: "なぜ先の政権は緊縮体制を続けていたのだろうか。薄々気づいていたはずである、もはや国家が市場に関与しなければ意味はないと。我々は積極的財政を主張し、すべてのアメリカ国民から自由や権利が奪われることを阻止する急務がある。"
+ TR_USA_welfare_oriented_policy: "福祉重視政策"
+ TR_USA_welfare_oriented_policy_desc: "福祉は国家の重要な施策の一つである。いくら自由とはいえ、避けようのない運命というものは存在する。それにより、自由が失われるものもいる。そんな状況に陥らぬよう、政府がそれを保証スべきだ。"
+ TR_USA_realisation_of_socialist_state: "社会主義国家の実現"
+ TR_USA_realisation_of_socialist_state_desc: "そもそも先の恐慌はいきすぎた資本主義経済が起こしたものだ。国家の経済への介入を可能にする状態に至れば、景気のコントロールが可能となりもはや新たな恐慌は怒らないであろう。"
+ TR_USA_flatly_and_equally: "平らかに、等しく"
+ TR_USA_flatly_and_equally_desc: "自由に万歳！平等に万歳！我々は自由です。解放されています！さあ一歩先に進みましょう。そこに真実があるでしょう。いやあるんです！"
+ TR_USA_religious_liberty: "信教の自由"
+ TR_USA_religious_liberty_desc: "信教の自由というものは、本来すべての人たる生命に与えられたものであり、何人たりともそれを犯すことはできない。それを犯すような奴らを我らは打ち倒すのだ。"
+ TR_denial_of_the_trinity: "三位一体の否定"
+ TR_denial_of_the_trinity_desc: "この国ではプロテスタントと呼ばれる異端度もの信仰が広まっている。だが信なる信仰はそれではない。ユタのちに押し込められたこの正当たる信仰を夜に広めようではないk。"
+ TR_USA_resist_the_white: "白き者への抵抗"
+ TR_USA_resist_the_white_desc: "大海の向こうよりやってきた白き悪魔たちは我々の棲家を、故郷を、家族をすべて台無しにした。もはや怒りは抑えきれない。自らの力で立ち上がり、自らの力で自由を手にしなければならない。"
+ TR_USA_who_is_the_USA_for: "アメリカは誰のためにあるのか"
+ TR_USA_who_is_the_USA_for_desc: "白人のためにアメリカはあると思ったら、それは間違いである。アメリカは古くより住む我々のものであり、彼らが住んだのはたった数百年だ。"
+ TR_USA_the_old_way: "古き道"
+ TR_USA_the_old_way_desc: "古き道"
+ TR_USA_white_supremacy: "白人至上主義"
+ TR_USA_white_supremacy_desc: "白人至上主義"
+ TR_USA_persecution_of_blacks: "黒人への迫害"
+ TR_USA_persecution_of_blacks_desc: "黒人への迫害"
+ TR_USA_cooperation_with_KKK: "KKKとの協力"
+ TR_USA_cooperation_with_KKK_desc: "KKKとの協力"
+ TR_USA_WASP: "White Anglo-Saxson Protestant"
+ TR_USA_WASP_desc: "White Anglo-Saxson Protestant"
+ TR_USA_hostility_with_KKK: "KKKとの敵対"
+ TR_USA_hostility_with_KKK_desc: "KKKとの敵対"
+ TR_USA_contact_with_southern_states: "南部諸州への接触"
+ TR_USA_contact_with_southern_states_desc: "南部諸州への接触"
+ TR_USA_accept_partial_socialism: "部分的な社会主義を許容"
+ TR_USA_accept_partial_socialism_desc: "部分的な社会主義を許容"
+ TR_USA_hold_on_to_power: "政権を維持"
+ TR_USA_hold_on_to_power_desc: "政権を維持"
+ TR_USA_national_employment_policy: "国家雇用政策"
+ TR_USA_national_employment_policy_desc: "国家雇用政策"
+ TR_USA_new_deal: "巻き返し"
+ TR_USA_new_deal_desc: "巻き返し"
+ TR_USA_military_contacts: "軍部との接触"
+ TR_USA_military_contacts_desc: "軍部との接触"
+ TR_USA_freedom_fighters: "自由の戦士"
+ TR_USA_freedom_fighters_desc: "自由の戦士"
+ TR_USA_contact_with_central_states: "中央部諸州への接触"
+ TR_USA_contact_with_central_states_desc: "中央部諸州への接触"
+ TR_USA_support_for_New_York_independence: "ニューヨーク独立を支持"
+ TR_USA_support_for_New_York_independence_desc: "ニューヨーク独立を支持"
+ TR_USA_endorsement_of_NYM_for_president: "ニューヨークの大統領"
+ TR_USA_endorsement_of_NYM_for_president_desc: "ニューヨークの大統領"
+ TR_USA_holy_land: "神聖国家"
+ TR_USA_holy_land_desc: "神聖国家"
+ TR_USA_american_imperator: "アメリカの皇帝"
+ TR_USA_american_imperator_desc: "アメリカの皇帝"
