アナーキストがなぜかいないけど仮配置

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -356,9 +356,6 @@
  SPR_democratic_ADJ: "スペイン"
  SPR_neutrality_ADJ: "スペイン"
  SPR_communism_ADJ: "スペイン"
- SPR_socialdemocratic: "スペイン共和国"
- SPR_socialdemocratic_DEF: "スペイン共和国"
- SPR_socialdemocratic_ADJ: "スペイン共和国"
  SPR: "スペイン"
  SPR_DEF: "スペイン"
  SPR_ADJ: "スペイン"
@@ -3137,8 +3134,8 @@
  SPC_democratic_DEF: "スペイン"
  SPC_neutrality: "アラゴン地域防衛評議会"
  SPC_neutrality_DEF: "アラゴン地域防衛評議会"
- SPC_communism: "共和派スペイン"
- SPC_communism_DEF: "共和派スペイン"
+ SPC_communism: "スペインコミューン"
+ SPC_communism_DEF: "スペインコミューン"
  SPC_fascism_ADJ: "スペイン"
  SPC_democratic_ADJ: "スペイン"
  SPC_neutrality_ADJ: "スペイン"
@@ -5442,9 +5439,9 @@
  SPD_socialdemocratic: "Spain"
  SPD_socialdemocratic_ADJ: "Spanish"
  SPD_socialdemocratic_DEF: "Republic of Spain"
- SPR_socialdemocratic: "Spain"
- SPR_socialdemocratic_ADJ: "Spanish"
- SPR_socialdemocratic_DEF: "Republic of Spain"
+ SPR_socialdemocratic: "スペイン共和国"
+ SPR_socialdemocratic_ADJ: "スペイン共和国"
+ SPR_socialdemocratic_DEF: "スペイン共和国"
  SRL_socialdemocratic: "Sri Lanka"
  SRL_socialdemocratic_ADJ: "Sri Lankan"
  SRL_socialdemocratic_DEF: "Republic of Sri Lanka"
