--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -163,7 +163,7 @@
  STATE_162:0 "トスカーナ"
  STATE_163:1 "STATE_163_ITA"
  STATE_164:1 "STATE_164_ITA"
- STATE_165:0 "カタルーニャ"
+ STATE_165:0 "カタルーニャ市部"
  STATE_166:0 "アラゴン西部"
  STATE_167:0 "バレンシア"
  STATE_168:0 "ムルシア"
@@ -1042,3 +1042,5 @@
  STATE_1040:0 "メイン"
  STATE_1041:0 "アラゴン北部"
  STATE_1042:0 "トレド"
+ STATE_1043:0 "カタルーニャ南部"
+ STATE_1044:0 "カタルーニャ北部"
