スペイン内戦Ⅱ

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -3149,11 +3149,14 @@
  SPD_democratic_DEF: "スペイン"
  SPD_neutrality: "アラゴン地域防衛評議会"
  SPD_neutrality_DEF: "アラゴン地域防衛評議会"
+ SPD_anarchism: "CNT-FAI"
+ SPD_anarchism_DEF: "CNT-FAI"
  SPD_communism: "共和派スペイン"
  SPD_communism_DEF: "共和派スペイン"
  SPD_fascism_ADJ: "スペイン"
  SPD_democratic_ADJ: "スペイン"
  SPD_neutrality_ADJ: "スペイン"
+ SPD_anarchism_ADJ: "スペイン"
  SPD_communism_ADJ: "スペイン"
  SPD: "スペイン"
  SPD_DEF: "スペイン"
