--- a/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
+++ b/localisation/TR_frontend/japanese/TR_frontend_l_japanese.yml
@@ -6,17 +6,22 @@
  TR_MAIN_FACTION_ALLIES:"§u連合国・旧協商§!"
  TR_MAIN_FACTION_INTERNATIONAL:"§R第三インターナショナル§!"
 
- TR_RUS_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争では革命直後の不安定なドイツを攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
+ TR_RUS_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_SLAVENTENTE$の盟主ロシアによる秩序は揺らぎつつある。\n先の大戦争ではドイツ帝国を攻撃し、大英帝国と共に勝者となったが、フィンランドの独立運動の激化、獲得した中東地域での民族運動など、多くの問題に直面している。\n英雄であるツァーリ・アレクセイは反動思想を強めており、国内では弾圧された共産主義者が邪悪な計画を練っている。\n陸軍は大規模なイランへの攻撃作戦を立案し、海軍はバルト艦隊の拡大を敢行する中、政府の統率はもはや取れていない。\nバルカンとスラブの盟主としての立ち位置すら揺らぐ今、帝国は大きな方針転換を求められている。"
+
  TR_ENG_MAIN_SCENARIO_DESC:"$TR_MAIN_FACTION_ALLIES$の盟主イギリスは、欧州大陸の共産主義の拡大に強い懸念を示している。\n先の大戦争で圧倒的な海の王者であることを証明したイギリスは、その後もロシアと建艦競争を行い、世界首位の海軍力で欧州の海を自らの支配下に置いている。\n共産主義の台頭によって、植民地や自治領でも過激な思想が発生し、ロンドンはその対応に追われているようだ。\n大英帝国の栄光を保つために、我々はかつての盟友フランス、ロシアと共に共産主義者を破壊しなければならない。戦いの時は迫りつつある。"
 
- TR_GER_MAIN_SCENARIO_DESC:"この国は$TR_MAIN_FACTION_INTERNATIONAL$の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦するだろう！"
+ TR_GER_MAIN_SCENARIO_DESC:"§Rドイツ自由社会主義共和国§!は、§R第三インターナショナル§!に加盟する国家である。\n革命に揺れるパリに呼応して1918年11月に始まったドイツ革命は、ドイツの全てを変えてしまった。それまでユンカーや資本家が主流だった政治基盤は§R労働者と兵士による評議会§!に置き換えられ、ローザ・ルクセンブルクやカール・リープクネヒトを筆頭とする共産主義者によって民主政治が行われている。\nしかし、§u大戦争§!の結果として我らの故地§1プロイセン§!が§rロシア帝国§!に奪われてしまった事は、ゲルマン民族主義者に大きな衝撃を与えた。§1失われた旧領土の奪還§!を掲げる彼らは評議会においてその勢力を急速に拡大し、共産主義者にとって大きな脅威となっている。"
 
  TR_FRA_MAIN_SCENARIO_DESC:"§Rフランス§!は§Rインターナショナル§!の盟主にして欧州初の革命政府ではあるが、革命後の連立政権が崩壊して以降、政治的混沌を極めている。\nこの情勢に国民は失望しており、更に§0雇用の問題§!や§0人口動態の問題§!などを抱えており、これらの諸問題に対応しなければならないだろう。\nまた、外に目を向けてみると§Bフランス領アフリカ§!は未だに§Bフランス共和国§!を僭称する奴らに占拠されており、§Bカレー§!と§Bシェルブール§!は§Bイギリス§!が大戦の終結間際にどさくさに紛れて占拠している...我々はこれらの不当に占拠された土地を取り戻すことはできるのだろうか？"
 
  TR_SRI_MAIN_SCENARIO_DESC:"この国は§R共産主義§!の国家だ。世界大戦には$TR_MAIN_FACTION_INTERNATIONAL$として参戦する可能性が高い。"
+
  TR_JAP_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦った大日本帝国はその後も順調に国力を伸ばし、アジア唯一の列強と自負している。1920年代の相次ぐ経済危機も高橋是清蔵相による積極財政で乗り越えた。しかし、長引く積極財政によって引き起こされたインフレに国民は苦しんでいる。そのうえ、国民は今の大日本帝国の国際地位が低すぎると考え対外進出を求めている。旭日は世界を照らすのだろうか？"
+
  TR_USA_MAIN_SCENARIO_DESC:"1929年10月24日の暗黒の木曜日を発端として起こった大恐慌は、自由の国アメリカを未だに苦しめている。その後の政権はことごとく恐慌に対する対策に失敗した。国中に失業者が溢れており、そこには夢も希望も存在しない。\nこの状況に対し民衆が望む政治は、§B民主党§!によるものでも、§2共和党§!によるものでもない。そう、革新的な§R新たなる政治§!を望んでいるのだ。\nだが一方で、一部の政治家や民衆は§R新興勢力§!に対し危機感を抱いており、南部においてそれは顕著である。\n果たして彼らの望みは§5平和的§!に実現されるのだろうか?あるいは§R取り返しのつかない暴力§!へと至るのだろうか？\n御託はもういい、全ては本年度の選挙の結果により決定される。"
 
  TR_CZE_MAIN_SCENARIO_DESC:"§B大戦争§!で独立を果たしたチェコは、ズデーテンの確保に失敗した国民社会党が失脚して以降、シュコダ財閥による独裁が続いているが、国民社会党は未だに体制に反抗しており、他にもロシアとドイツのイデオロギー的な影響力の衝突によって早くも危機に陥っている。\n$TR_MAIN_FACTION_INTERNATIONAL$は我が国の共産主義者を刺激し、$TR_MAIN_FACTION_SLAVENTENTE$は我が国の民族主義を高揚させようと必死の内政工作を行っている。\n国内の共産主義者の過激化は留まるところを知らない。我々は必ず我々の手でこの地域における確固たる独立を保たなければならない！"
+
  TR_GRE_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦ったギリシャは、大戦争と希土戦争で膨大な小アジアの領土を得た。\nさらに、セルビアと共に行ったアルバニア分割は成功し、この地域における支配も安定している。\nだが、この地域を狙う§R北イタリア§!の影響力は我が国の共産主義者を活発化させ、政府は統一した意見を示すことすらできていない。\nメガリ・イデアを達成したヨーロッパ最古の文明国ギリシアは、どのような進路を描くのだろうか。"
+
  TR_SER_MAIN_SCENARIO_DESC:"かつて§u協商§!として戦ったセルビアは、大セルビア主義を体現するために大規模な軍拡を行っている。\nギリシアと共同で行ったアルバニア分割によって得た工業力は、我が国の艦隊建造計画に大きく貢献した。\n§R共産主義§!の影響力がバルカンを蝕まんとする中、セルビアは§rロシア帝国§!との強い関係によって守られている。\n我々に奪われた領土の回復を試みる回復同盟が我が国に対する圧力を強めている中、セルビアはそれを利用した新たな拡大計画を検討している..."
