チェコ革命一回削除

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -3134,8 +3134,8 @@
  SPC_democratic_DEF: "スペイン"
  SPC_neutrality: "アラゴン地域防衛評議会"
  SPC_neutrality_DEF: "アラゴン地域防衛評議会"
- SPC_communism: "スペインコミューン"
- SPC_communism_DEF: "スペインコミューン"
+ SPC_communism: "スペイン人民共和国"
+ SPC_communism_DEF: "スペイン人民共和国"
  SPC_fascism_ADJ: "スペイン"
  SPC_democratic_ADJ: "スペイン"
  SPC_neutrality_ADJ: "スペイン"
