--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6291,7 +6291,9 @@
  GRS: "革命ギリシャ"
  GRS_ADJ: "革命ギリシャ"
  GRS_DEF: "ギリシャ革命戦線"
- 
+ NAB: "∇-Ναμπλούς"
+ NAB_DEF: "∇"
+ NAB_ADJ: "∇"
  USA_anarchism: "アメリカ無政府主義評議会"
  USA_anarchism_DEF: "アメリカ無政府主義評議会"
  USA_syndicalism: "アメリカ労働組合連邦"
