--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -14,7 +14,6 @@
  GER_social_fascism:0 "社会ファシズム論"
  GER_unite_SPD:0 "社共合同"
  GER_totalitarianism:0 "全体主義論"
- GER_pandering_to_the_left:0 "左派との妥協"
  GER_positive_propaganda:0 "積極的なプロパガンダ"
  GER_approaching_international:0 "インターナショナルへの接近"
  GER_organize_secret_police_force:0 "秘密警察を組織"
@@ -48,7 +47,6 @@
  GER_socialist_realism:0 "社会主義リアリズム"
  GER_state_atheism:0 "国家無神論"
  GER_support_finland:0 "フィンランドの独立を支援"
- newfocus_95:0 ""
  GER_friendship_with_denmark:0 "デンマークとの友好"
  GER_reconquest_african_colonies:0 "退路を断つ"
  GER_war_economy:0 "戦争経済"
@@ -98,8 +96,6 @@
  airforce_7:0 "大型機への注力"
  airforce_6:0 "対空砲への注力 II"
  GER_council_election:0 "1936年評議会選挙"
- GER_USPD:0 "独立社会民主党の勝利"
- GER_MSPD:0 "多数派社会民主党の勝利"
  GER_SPD:0 "社会民主党の勝利"
  GER_NSAP:0 "国民社会主義者の勝利"
  industry_6:0 "インフラへの投資"
@@ -109,7 +105,6 @@
  GER_FGE:0 "亡命政府の公認"
  GER_ENG:0 "イギリスとの友好"
  GER_Allies:0 "連合国への加盟"
- GER_RUS:0 ""
  GER_break_off_a_bridgehead:0 "橋頭堡を断つ"
  GER_SRI:0 "イタリアからの産業顧問"
  GER_balkan:0 "東欧への介入"
@@ -122,9 +117,9 @@
  newfocus_104:0 "スカンディナヴィアの統制"
  GER_Straits_of_Dover:0 "海峡への一手"
  GER_heavy_industry:0 "重工業への投資"
- GER_industrial_advisor_from_3rd_inter:0 "フランスからの産業顧問"
- GER_industrial_advisor_from_France:0 "フランスからの産業顧問"
  GER_industrial_advisor_from_france:0 "フランスからの産業顧問"
  GER_out_of_country_experts:0 "国外の専門家"
  GER_siegfried_fortress_line:0 "ジークフリート要塞線"
- GER_Revisionism:0 "修正主義者との妥協"
+ GER_compromise_with_revisionists:0 "修正主義者との妥協"
+ GER_attack_france:0 "フランスへの攻撃"
+ 
