チェコとかいろいろなイベント整備

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -83,7 +83,7 @@
  STATE_82:0 "バナト"
  STATE_83:0 "クリシャナ"
  STATE_84:0 "トランシルヴァニア"
- STATE_85:0 "ダンツィヒ"
+ STATE_85:0 "グダンスク"
  STATE_86:0 "ポズナニ"
  STATE_87:0 "ウーチ"
  STATE_88:0 "クラクフ"
@@ -186,7 +186,7 @@
  STATE_185:0 "エピロス"
  STATE_186:0 "ペロポネソス"
  STATE_187:0 "エーゲ海諸島"
- STATE_188:0 "メーメル"
+ STATE_188:0 "クライペダ"
  STATE_189:0 "シャウレイ"
  STATE_190:0 "クルゼメ"
  STATE_191:0 "タルトゥ"
