スペチェコルーマニア

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -404,7 +404,7 @@
  SRI_subject: "$OVERLORDADJ$ $ITA$"
  SRI_subject_DEF: "$OVERLORDADJ$ $ITA$"
  ROM_fascism: "ルーマニア鉄衛団"
- ROM_fascism_DEF: "ルーマニア鉄衛団"
+ ROM_fascism_DEF: "ルーマニア神使ミハイル軍団国"
  ROM_democratic: "ルーマニア"
  ROM_democratic_DEF: "ルーマニア"
  ROM_neutrality: "ルーマニア王国"
