スペインのNF整備

--- a/localisation/TR_focus/japanese/TR_SPR_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SPR_l_japanese.yml
@@ -4,7 +4,21 @@ SPR2: "政治的安定"
 SPR2: "統治機構の拡充"
 SPR3: "義勇兵の招集"
 SPR4: "装備生産"
-SPR_p: "統治機構の拡大"
 SPR_mil1: "内戦からの学習1"
 SPR_mil2: "内戦からの学習2"
 SPR_mil3: "内戦からの学習3"
+
+SPR_1: "政治的結束"
+SPR_2: "政治的結束2"
+SPR_3: "政治的結束3"
+SPR_4: "政治的結束4"
+SPR_5: "プロパガンダ1"
+SPR_6: "プロパガンダ2"
+SPR_7: "プロパガンダ3"
+SPR_m1: "軍事研究1"
+SPR_m2: "軍事研究2"
+SPR_m3: "軍事研究3"
+SPR_m4: "武器生産の拡大1"
+SPR_m5: "武器生産の拡大2"
+SPR_m6: "民間必需品の生産"
+SPR_fin: "内戦の終結"
