--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -44,6 +44,18 @@
  TR_Russia.15.d:"アラスカの大地に埋まる新たな資源を採掘する基盤が整った。すでに試験的に作られた油田街にはロシア本土から多くの労働者が移住している。"
  TR_Russia.15.a:"続行しろ。"
 
+ TR_Russia.16.t:"ロシアからの支援"
+ TR_Russia.16.d:"ロシア帝国から援助として訪れた数万人のロシア兵士が今日、カルリスタの正統な軍隊に配属された。この増援によって我々はスペインの地で栄光を取り戻すことができるだろう。"
+ TR_Russia.16.a:"勝利へ！"
+
+ TR_Russia.17.t:"ロシアからの支援"
+ TR_Russia.17.d:"ロシア帝国が突然我が国に対して投下した大量の資本によって急速に稼働を開始した軍需工場が我々の軍隊を潤している！我々はさらに生産量を上げ、この闘争に勝利しなければならない！"
+ TR_Russia.17.a:"勝利へ！"
+
+ TR_Russia.18.t:"ロシア資本局"
+ TR_Russia.18.d:"ロシア帝国は内戦勝利後までを見据えた大規模投資計画を開始した。彼らが我々に継続的に行う投資が国家の予算として組み込まれることで、より大規模な作戦の実施が可能になった。"
+ TR_Russia.18.a:"勝利へ！"
+
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
  TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。\n不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
  TR_Russia_news.1.a: "なんということだ"
