--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -48,8 +48,8 @@
 
  modifier_production_cost_infrastructure_factor: "§Yインフラ§!建設コスト"
  modifier_production_cost_rail_way_factor: "§Y鉄道§!建設コスト"
-
-
+ RUS_spa_tsar_bank:"ロシアの資本投下"
+ RUS_spa_tsar_bank_rus:"スペインへの投資"
  
 
 
